k8s/prod/prod-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    app.kubernetes.io/environment: prod
    app.kubernetes.io/managed-by: github-actions
