k8s/prod/backend-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: backend
          image: ghcr.io/fastapi-liora/fastapi-traefik-datascientest-project-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000

          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"

          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 5

          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 90
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
