k8s/prod/postgres-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-prod
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-prod
  template:
    metadata:
      labels:
        app: db-prod
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: db-prod
  namespace: prod
spec:
  ports:
  - port: 5432
  selector:
    app: db-prod
